Test CI with background color tweak

--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ section h3 {
   --light-brown: #d7ccc8;
   --q1-bg: #fff3e0;
   --note-bg: #fffde7;
-  --bg-color: #fffaf7;
+  --bg-color: #fdfaf6;
 }
 
 * {
